--- a/app/src/main/res/layout/fragment_record_info.xml
+++ b/app/src/main/res/layout/fragment_record_info.xml
@@ -93,7 +93,7 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="20dp"
-                android:text="Body Location:"
+                android:text="@string/body_location"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/bodyLocationSpinner"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -107,7 +107,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="8dp"
-                android:text="Description"
+                android:text="@string/description"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/buttonSaveChanges"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -120,7 +120,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:text="Location: "
+                android:text="@string/location"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/buttonViewLocation"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -134,7 +134,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Record Information"
+                android:text="@string/record_information"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +147,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="View Location"
+                android:text="@string/view_location"
                 app:layout_constraintBottom_toTopOf="@+id/buttonSaveChanges"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -161,7 +161,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="Save Changes"
+                android:text="@string/save_changes"
                 app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -176,7 +176,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Comment"
+                android:text="@string/comment"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/commentTextView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -190,7 +190,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="View Photos"
+                android:text="@string/view_photos"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/buttonAddPhoto"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -205,7 +205,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="Add Photo"
+                android:text="@string/add_photo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
