--- a/app/src/main/res/layout/fragment_title_bar.xml
+++ b/app/src/main/res/layout/fragment_title_bar.xml
@@ -23,7 +23,7 @@
 
     <TextView
         android:id="@+id/fragment_title_bar_fragmentTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="11dp"
         android:layout_height="match_parent"
         android:layout_weight="6"
         android:gravity="center_vertical|center_horizontal"
