--- a/app/src/main/res/layout/fragment_body.xml
+++ b/app/src/main/res/layout/fragment_body.xml
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/total"
+            android:text="Total:"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_body_addButton" />
 
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/unlisted"
+            android:text="Unlisted:"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_body_totalText" />
 
@@ -93,7 +93,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:enabled="true"
-            android:text="@string/touch_a_location"
+            android:text="Touch a Location"
             android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="24sp"
             android:visibility="invisible"
