Added a progress bar, I think.
Fix the timer, constantly calls login.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,11 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".login_activity">
 
+    <RelativeLayout
+        android:id="@+id/loadingPanel"
+        android:layout_width="358dp"
+        android:layout_height="86dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logoImage">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+    </RelativeLayout>
+
     <Button
         android:id="@+id/signupButton"
         android:layout_width="119dp"
         android:layout_height="62dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginBottom="80dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="28dp"
         android:text="@string/signupText"
@@ -18,6 +37,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/signinAnwaysButton"
+        android:layout_width="119dp"
+        android:layout_height="62dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/signup_anways_prompt"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signupButton" />
 
     <ImageView
         android:id="@+id/logoImage"
@@ -36,12 +71,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="8dp"
         android:text="@string/DontHaveAccountPromp"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoImage"
+        app:layout_constraintTop_toBottomOf="@+id/loadingPanel"
         app:layout_constraintVertical_bias="0.893" />
 
 </android.support.constraint.ConstraintLayout>
