--- a/app/src/main/res/layout/fragment_full_gallery.xml
+++ b/app/src/main/res/layout/fragment_full_gallery.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -14,17 +15,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_marginTop="5dp"
         android:id="@+id/fragment_full_gallery_gridview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:columnWidth="90dp"
         android:gravity="center"
-        android:horizontalSpacing="5dp"
+        android:horizontalSpacing="10dp"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
         android:verticalSpacing="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_titlebar"/>
+        app:layout_constraintTop_toBottomOf="@+id/fragment_titlebar"></GridView>
 </android.support.constraint.ConstraintLayout>
